master: fix 3 years gap

--- a/src/styles.css
+++ b/src/styles.css
@@ -21,7 +21,7 @@
   
   button {
     width: auto;
-    height: 60px;
+    height: auto;
     font-size: 18px;
     margin-top: 20px;
     margin-bottom: 10px;
